--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
+    "dotenv": "^17.2.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "tailwindcss": "^4.1.10",
