--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "vite build --base=/kraakscore/ && gh-pages -d dist"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
     "dotenv": "^17.2.0",
