--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
