--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
+    "floating-vue": "^5.2.2",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "tailwindcss": "^4.1.10",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
