ranking bijna goed, pdf aangepast

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL="https://jota.nl/api"
-# https://jota.nl/api
+VITE_API_URL="http://localhost:54321/"
+# Wordt lokaal gebruikt, maar kan ook op een server draaien
