--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-VITE_API_URL="http://localhost:54321/"
-# Wordt lokaal gebruikt, maar kan ook op een server draaien
+VITE_API_URL=https://www.jota.nl/api
