--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-VITE_API_URL=https://www.jota.nl/api
+# !!! restart server na aanpassen .env bestand !!!
+# Environment variables for the Laurierboom application
+
+VITE_API_URL=https://www.jota.nl/laurierboom/api
