--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "floating-vue": "^5.2.2",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "simple-icons": "^15.9.0",
     "tailwindcss": "^4.1.10",
     "vue": "^3.5.13",
     "vue-toastification": "^2.0.0-rc.5"
