--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "simple-icons": "^15.9.0",
     "tailwindcss": "^4.1.10",
     "vue": "^3.5.13",
+    "vue-router": "^4.5.1",
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
