--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-# !!! restart server na aanpassen .env bestand !!!
-# Environment variables for the Laurierboom application
-
-VITE_API_URL=https://www.jota.nl/laurierboom/api
+VITE_BASE_URL=/
+# VITE_API_URL is the base URL for the API used by the Laurierboom application
+# VITE_API_URL=https://www.jota.nl/laurierboom/api
