--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
+    "dompurify": "^3.2.7",
     "dotenv": "^17.2.0",
     "floating-vue": "^5.2.2",
     "jspdf": "^3.0.1",
