--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "simple-icons": "^15.9.0",
     "tailwindcss": "^4.1.10",
     "vue": "^3.5.13",
-    "vue-toastification": "^2.0.0-rc.5",
-    "vuejs-confirm-dialog": "^0.5.2"
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
