PDF file ellende opgelost

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # !!! restart server na aanpassen .env bestand !!!
 # Environment variables for the Laurierboom application
 
-VITE_API_URL=https://www.jota.nl/laurierboom/api
+VITE_API_URL=http://localhost:54321
+VITE_BASE_URL=/
