--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,6 @@
 # !!! restart server na aanpassen .env bestand !!!
 # Environment variables for the Laurierboom application
-VITE_BASE_URL=/
-VITE_BASE_URL_API=http://localhost:54321
-VITE_UPLOADS_URL=http://localhost:54321
+
+VITE_BASE_URL=/kraakscore/
+VITE_BASE_URL_API=/laurierboom/api
+VITE_UPLOADS_URL=/laurierboom/uploads
