voorlopig zelf groepen indelen eruit gehaald te fout gevoelig

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 # !!! restart server na aanpassen .env bestand !!!
 # Environment variables for the Laurierboom application
-
+VITE_PUBLIC_URL=https://www.jota.nl
 VITE_BASE_URL=/kraakscore/
 VITE_BASE_URL_API=/laurierboom/api
 VITE_UPLOADS_URL=/laurierboom/uploads
